Thu May 31 11:43:08 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c: update a few strings.

Thu May 31 23:22:37 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, dice.c: fix a few text mode locale problems

Thu May 31 22:11:00 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* sound.c: minor bug
	* gtkboard.c, gtkgame.c: make pasting of position and match id's work
	in edit mode and before starting a new match.

Wed May 30 16:43:08 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* sound.c: print to stdout instead of stderr in case of missing sound
	files, etc.

Tue May 29 20:37:13 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: removed bearoff options

Mon May 28 23:37:57 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* sound.c: fix small sound setting problem

Fri May 25 17:56:41 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* sound.c, show.c, gtkoptions.c: fix small sound setting problem

Wed May 23 22:44:14 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* render.c: malloc more space for the labels to avoid crashes on small
	board sizes.

Wed May 23 17:12:54 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* file.c, file.h, Makefile.am, backgammon.h, export.c, export.h,
	gnubg.c, gtkfile.c, gtkgame.c, html.c, import.c, import.h, sgf.h: move
	some import/export/load/save functions for consistency. New files
	file.[ch] to allow the new cl command "import auto".

Fri May 18 21:02:50 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* openurl.c: small win32 improvement

Thu May 17 21:35:00 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* util.c: win32 fixes

Thu May 17 15:53:42 CEST 2007 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c, gtkwindows.c, progress.c: fix problem with
	DIALOG_FLAG_NOTIDY not being used. Make sure that the parent of the
	dialog is present.

	* util.c, board3d/matrix.c, board3d/matrix.h: compiler warnings

Mon May 14 12:21:13 CEST 2007 Christian Anthon <anthon@kiku.dk>
